fix spacing between posts and sidebar

--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ a {
 
 .post {
     overflow: hidden;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     border-bottom: 1px solid #E7EBED;
 }
 
@@ -219,7 +219,7 @@ a {
 #sidebar {
     width: 100%;
     margin: 5px;
-    padding: 30px 0 0 0;
+    padding: 15px 0 0 0;
 }
 
 #sidebar ul {
